# Graphics-CW

./: .gitignore  CMakeLists.txt  FloatingModel.h  Model.h  README.md  Scene.cpp  Utility.cpp  Utility.h  Vec3.h  Water.cpp  Water.h  boilerplate.h  perlin.h
model/: Crate.cpp  Crate.h  FloatingModel.h  Lantern.cpp  Lantern.h  Model.h  Raft.cpp  Raft.h  Sky.h  Water.cpp  Water.h  allmodels.h
